--- a/api-rest-1.0.ini
+++ b/api-rest-1.0.ini
@@ -75,7 +75,7 @@ constants = off
 
 ; Generate documentation for all class members
 
-private = on
+private = off
 
 ; Generate documentation for public and protected class members
 
