--- a/api-mongodb_odm-1.0.ini
+++ b/api-mongodb_odm-1.0.ini
@@ -42,7 +42,7 @@ doclet = doctrineapi
 ; The directory to find the doclet in. Doclets are expected to be in a
 ; directory named after themselves at the location given.
 
-;doclet_path = ./doclets
+doclet_path = "lib/doclets"
 
 ; The directory to find taglets in. Taglets allow you to make PHPDoctor handle
 ; new tags and to alter the behavour of existing tags and their output.
